mvc projesi NTier Architecture uygulanması, Identity extensionsion hatalarının giderilmesi, UnitOfWork ve Repository kullanımı, hataların giderilmesi ,genel düzenlemeler

--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/Index.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<evdekinisatcom.MvcWebApp1.Identity.ViewModels.UserViewModel>
+﻿@model IEnumerable<UserViewModel>
 
 @{
     ViewData["Title"] = "Index";
