--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_Layout.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_Layout.cshtml
@@ -1,321 +1,74 @@
-﻿<!doctype html>
-<html class="no-js" lang="en">
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Home one || Hurst</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-	<!-- Place favicon.ico in the root directory -->
-	<!-- Google Font -->
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-
-	<!-- all css here -->
-	<!-- bootstrap v3.3.6 css -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!-- animate css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- jquery-ui.min css -->
-	<link rel="stylesheet" href="css/jquery-ui.min.css">
-	<!-- meanmenu css -->
-	<link rel="stylesheet" href="css/meanmenu.min.css">
-	<!-- nivo-slider css -->
-	<link rel="stylesheet" href="lib/css/nivo-slider.css">
-	<link rel="stylesheet" href="lib/css/preview.css">
-	<!-- slick css -->
-	<link rel="stylesheet" href="css/slick.css">
-	<!-- lightbox css -->
-	<link rel="stylesheet" href="css/lightbox.min.css">
-	<!-- material-design-iconic-font css -->
-	<link rel="stylesheet" href="css/material-design-iconic-font.css">
-	<!-- All common css of theme -->
-	<link rel="stylesheet" href="css/default.css">
-	<!-- style css -->
-	<link rel="stylesheet" href="style.css">
-	<!-- shortcode css -->
-	<link rel="stylesheet" href="css/shortcode.css">
-	<!-- responsive css -->
-	<link rel="stylesheet" href="css/responsive.css">
-	<!-- modernizr css -->
-	<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - WissenProject</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WissenProject.styles.css" asp-append-version="true" />
 </head>
 <body>
-	<!-- WRAPPER START -->
-	<div class="wrapper">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WissenProject</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Index">Ürünler</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        @if (User.Identity!.IsAuthenticated)
+                        {
+                            <li class="nav-item mt-2 text-white">Hoşgeldin, @User.Identity.Name</li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container mt-4">
+        <main role="main">
+            @RenderBody()
+        </main>
+    </div>
 
-		<!-- Mobile-header-top Start -->
-		<div class="mobile-header-top hidden-lg hidden-md hidden-sm">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<!-- header-search-mobile start -->
-						<div class="header-search-mobile">
-							<div class="table">
-								<div class="table-cell">
-									<ul>
-										<li><a class="search-open" href="#"><i class="zmdi zmdi-search"></i></a></li>
-										<li><a href="login.html"><i class="zmdi zmdi-lock"></i></a></li>
-										<li><a href="my-account.html"><i class="zmdi zmdi-account"></i></a></li>
-										<li><a href="wishlist.html"><i class="zmdi zmdi-favorite"></i></a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- header-search-mobile start -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Mobile-header-top End -->
-		<!-- HEADER-AREA START -->
-		<header id="sticky-menu" class="header">
-			<div class="header-area">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-4 col-sm-offset-4 col-xs-7">
-							<div class="logo text-center">
-								<a href="index.html"><img src=" img/logo/logo.png " alt="" /></a>
-							</div>
-						</div>
-						<div class="col-sm-4 col-xs-5">
-							<div class="mini-cart text-right">
-								<ul>
-									<li>
-										<a class="cart-icon" href="#">
-											<i class="zmdi zmdi-shopping-cart"></i>
-											<span>3</span>
-										</a>
-										<div class="mini-cart-brief text-left">
-											<div class="cart-items">
-												<p class="mb-0">You have <span>03 items</span> in your shopping bag</p>
-											</div>
-											<div class="all-cart-product clearfix">
-												<div class="single-cart clearfix">
-													<div class="cart-photo">
-														<a href="#"><img src="img/cart/1.jpg" alt="" /></a>
-													</div>
-													<div class="cart-info">
-														<h5><a href="#">dummy product name</a></h5>
-														<p class="mb-0">Price : $ 100.00</p>
-														<p class="mb-0">Qty : 02 </p>
-														<span class="cart-delete"><a href="#"><i class="zmdi zmdi-close"></i></a></span>
-													</div>
-												</div>
-												<div class="single-cart clearfix">
-													<div class="cart-photo">
-														<a href="#"><img src="img/cart/2.jpg" alt="" /></a>
-													</div>
-													<div class="cart-info">
-														<h5><a href="#">dummy product name</a></h5>
-														<p class="mb-0">Price : $ 300.00</p>
-														<p class="mb-0">Qty : 01 </p>
-														<span class="cart-delete"><a href="#"><i class="zmdi zmdi-close"></i></a></span>
-													</div>
-												</div>
-											</div>
-											<div class="cart-totals">
-												<h5 class="mb-0">Total <span class="floatright">$500.00</span></h5>
-											</div>
-											<div class="cart-bottom  clearfix">
-												<a href="#" class="button-one floatleft text-uppercase" data-text="View cart">View cart</a>
-												<a href="#" class="button-one floatright text-uppercase" data-text="Check out">Check out</a>
-											</div>
-										</div>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
-			<!-- FOOTER START -->
-			<footer>
-				<!-- Footer-area start -->
-				<div class="footer-area">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-								<div class="single-footer">
-									<h3 class="footer-title  title-border">Contact Us</h3>
-									<ul class="footer-contact">
-										<li><span>Address :</span>28 Green Tower, Street Name,<br>New York City, USA</li>
-										<li><span>Cell-Phone :</span>012345 - 123456789</li>
-										<li><span>Email :</span>your-email@gmail.com</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-								<div class="single-footer">
-									<h3 class="footer-title  title-border">accounts</h3>
-									<ul class="footer-menu">
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Account</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Wishlist</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>My Cart</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Sign In</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Check out</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-								<div class="single-footer">
-									<h3 class="footer-title  title-border">shipping</h3>
-									<ul class="footer-menu">
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>New Products</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Top Sellers</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Manufactirers</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Suppliers</a></li>
-										<li><a href="#"><i class="zmdi zmdi-dot-circle"></i>Specials</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-lg-4 col-md-4 hidden-sm col-xs-12">
-								<div class="single-footer">
-									<h3 class="footer-title  title-border">your choice Products</h3>
-									<div class="footer-product">
-										<div class="row">
-											<div class="col-sm-6 col-xs-12">
-												<div class="footer-thumb">
-													<a href="#"><img src="img/footer/1.jpg" alt="" /></a>
-													<div class="footer-thumb-info">
-														<p><a href="#">Furniture Product<br>Name</a></p>
-														<h4 class="price-3">$ 60.00</h4>
-													</div>
-												</div>
-											</div>
-											<div class="col-sm-6 col-xs-12">
-												<div class="footer-thumb">
-													<a href="#"><img src="img/footer/1.jpg" alt="" /></a>
-													<div class="footer-thumb-info">
-														<p><a href="#">Furniture Product<br>Name</a></p>
-														<h4 class="price-3">$ 60.00</h4>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Footer-area end -->
-				<!-- Copyright-area start -->
-				<div class="copyright-area">
-					<div class="container">
-						<div class="row">
-							<div class="col-sm-6 col-xs-12">
-								<div class="copyright">
-									<p class="mb-0">&copy; <a href=" http://themeforest.net/user/codecarnival#contact " target="_blank"> CodeCarnival  </a> 2016. All Rights Reserved.</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-xs-12">
-								<div class="payment  text-right">
-									<a href="#"><img src="img/payment/1.png" alt="" /></a>
-									<a href="#"><img src="img/payment/2.png" alt="" /></a>
-									<a href="#"><img src="img/payment/3.png" alt="" /></a>
-									<a href="#"><img src="img/payment/4.png" alt="" /></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Copyright-area start -->
-			</footer>
-			<!-- FOOTER END -->
-			<!-- QUICKVIEW PRODUCT -->
-			<div id="quickview-wrapper">
-				<!-- Modal -->
-				<div class="modal fade" id="productModal" tabindex="-1" role="dialog">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							</div>
-							<div class="modal-body">
-								<div class="modal-product">
-									<div class="product-images">
-										<div class="main-image images">
-											<img alt="#" src="img/product/quickview-photo.jpg" />
-										</div>
-									</div><!-- .product-images -->
-
-									<div class="product-info">
-										<h1>Aenean eu tristique</h1>
-										<div class="price-box-3">
-											<hr />
-											<div class="s-price-box">
-												<span class="new-price">$160.00</span>
-												<span class="old-price">$190.00</span>
-											</div>
-											<hr />
-										</div>
-										<a href="shop.html" class="see-all">See all features</a>
-										<div class="quick-add-to-cart">
-											<form method="post" class="cart">
-												<div class="numbers-row">
-													<input type="number" id="french-hens" value="3">
-												</div>
-												<button class="single_add_to_cart_button" type="submit">Add to cart</button>
-											</form>
-										</div>
-										<div class="quick-desc">
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor. Donec non est at libero.
-										</div>
-										<div class="social-sharing">
-											<div class="widget widget_socialsharing_widget">
-												<h3 class="widget-title-modal">Share this product</h3>
-												<ul class="social-icons">
-													<li><a target="_blank" title="Google +" href="#" class="gplus social-icon"><i class="zmdi zmdi-google-plus"></i></a></li>
-													<li><a target="_blank" title="Twitter" href="#" class="twitter social-icon"><i class="zmdi zmdi-twitter"></i></a></li>
-													<li><a target="_blank" title="Facebook" href="#" class="facebook social-icon"><i class="zmdi zmdi-facebook"></i></a></li>
-													<li><a target="_blank" title="LinkedIn" href="#" class="linkedin social-icon"><i class="zmdi zmdi-linkedin"></i></a></li>
-												</ul>
-											</div>
-										</div>
-									</div><!-- .product-info -->
-								</div><!-- .modal-product -->
-							</div><!-- .modal-body -->
-						</div><!-- .modal-content -->
-					</div><!-- .modal-dialog -->
-				</div>
-				<!-- END Modal -->
-			</div>
-			<!-- END QUICKVIEW PRODUCT -->
-
-	</div>
-	<!-- WRAPPER END -->
-	<!-- all js here -->
-	<!-- jquery latest version -->
-	<script src="js/vendor/jquery-1.12.0.min.js"></script>
-	<!-- bootstrap js -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- jquery.meanmenu js -->
-	<script src="js/jquery.meanmenu.js"></script>
-	<!-- slick.min js -->
-	<script src="js/slick.min.js"></script>
-	<!-- jquery.treeview js -->
-	<script src="js/jquery.treeview.js"></script>
-	<!-- lightbox.min js -->
-	<script src="js/lightbox.min.js"></script>
-	<!-- jquery-ui js -->
-	<script src="js/jquery-ui.min.js"></script>
-	<!-- jquery.nivo.slider js -->
-	<script src="lib/js/jquery.nivo.slider.js"></script>
-	<script src="lib/home.js"></script>
-	<!-- jquery.nicescroll.min js -->
-	<script src="js/jquery.nicescroll.min.js"></script>
-	<!-- countdon.min js -->
-	<script src="js/countdon.min.js"></script>
-	<!-- wow js -->
-	<script src="js/wow.min.js"></script>
-	<!-- plugins js -->
-	<script src="js/plugins.js"></script>
-	<!-- main js -->
-	<script src="js/main.js"></script>
+    <footer class="border-top footer text-muted mt-4">
+        <div class="container text-center py-3">
+            &copy; 2023 - WissenProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <div class="mt-2">
+                <a href="#"><i class="bi bi-facebook me-2"></i></a>
+                <a href="#"><i class="bi bi-twitter me-2"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
