--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/_ViewImports.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using evdekinisatcom.MvcWebApp_App.WebMvc.Models
 @using evdekinisatcom.MvcWebApp_App.Service.ViewModels
 @using evdekinisatcom.MvcWebApp.DataAccess.Identity.Models;
+@using evdekinisatcom.MvcWebApp_App.Service.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
