--- a/evdekinisatcom.MvcWebApp.WebMvc/Areas/Admin/Views/Role/Edit.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Areas/Admin/Views/Role/Edit.cshtml
@@ -1,12 +1,15 @@
-﻿@model UsersInOrOutViewModel
-
+﻿@using evdekinisatcom.MvcWebApp_App.Service.ViewModels;
+@model UsersInOrOutViewModel
 @{
     ViewData["Title"] = "Edit";
+    Layout = "_Layout";
 }
 
-
 <div class="row">
-    <form asp-action="Edit" asp-controller="Role" method="post">
+    <form asp-action="Edit" asp-controller="Role" asp-area="Admin" method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" name="RoleId" value="@Model.Role.Id" />
+        <input type="hidden" name="RoleName" value="@Model.Role.Name" />
         <h5 class="bg-primary text-white">@Model.Role.Name rolünde bulunan kullanıcılar</h5>
         <table class="table table-bordered ">
             <thead>
@@ -22,7 +25,7 @@
                     @foreach (var user in Model.UsersInRole)
                     {
                         <tr>
-                            <td>@user.Username</td>
+                            <td>@user.Name</td>
                             <td>@user.Email</td>
                             <td>
                                 <input type="checkbox" name="UserIdsToDelete" value="@user.Id">
@@ -54,11 +57,10 @@
                     @foreach (var user in Model.UsersOutRole)
                     {
                         <tr>
-                            <td>@user.Username</td>
+                            <td>@user.Name</td>
                             <td>@user.Email</td>
                             <td>
                                 <input type="checkbox" name="UserIdsToAdd" value="@user.Id">
-
                             </td>
                         </tr>
                     }
@@ -72,9 +74,7 @@
             </tbody>
         </table>
         <div class="mt-2 text-center">
-            <input asp-route-id="@Model.Role.Id" class="btn btn-primary" type="submit" value="Save Edit" />
-
+            <input class="btn btn-primary" type="submit" value="Save Edit" />
         </div>
     </form>
 </div>
-
