--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/Register.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Account/Register.cshtml
@@ -2,12 +2,9 @@
 
 @{
     ViewData["Title"] = "Register";
+    Layout = "_LayoutBase";
 }
 
-<h1>Register</h1>
-
-<h4>RegisterViewModel</h4>
-<hr />
 <div class="row">
     @if (TempData["message"] != null)
     {
@@ -15,58 +12,77 @@
             @TempData["message"]
         </div>
     }
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Register">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
+</div>
+
+<!--section start-->
+<section class="register-page section-b-space">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Hesap Oluştur</h3>
+                <div class="theme-card">
+                    <form method="post" asp-action="Register" class="theme-form">
+                        <div class="form-row row">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="col-md-6">
+
+                                <div class="form-group">
+                                </div>
+                                <label asp-for="Name" class="control-label" for="email">Adınız :</label>
+                                <input asp-for="Name" class="form-control" id="fname" placeholder="Adınız...">
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Surname">Soyadınız :</label>
+                                <input asp-for="Surname" class="form-control" id="lname" placeholder="Soyadınız...">
+                                <span asp-validation-for="Surname" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-row row">
+                            <div class="col-md-6">
+                                <label asp-for="Email" for="email">Eposta Adresi :</label>
+                                <input asp-for="Email" type="text" class="form-control" id="email" placeholder="Email...">
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Username" class="control-label">Kullanıcı Adı :</label>
+                                <input asp-for="Username" class="form-control" placeholder="Bir Kullanıcı Adı Belirleyin..." />
+                                <span asp-validation-for="Username" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="PhoneNumber" class="control-label"> Telefon :</label>
+                                <input asp-for="PhoneNumber" class="form-control" placeholder="Telefon Numaranız..." />
+                                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Address" class="control-label">Adresiniz :</label>
+                                <textarea asp-for="Address" class="form-control" rows="4"></textarea>
+                                <span asp-validation-for="Address" class="text-danger"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Password">Şifre :</label>
+                                <input asp-for="Password" type="password" class="form-control" placeholder="Şifrenizi Girin...">
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                                <div class="col-md-6">
+                                    <label asp-for="ConfirmPassword" class="control-label">Şifre Tekrar :</label>
+                                    <input asp-for="ConfirmPassword" class="form-control" class="form-control" id="review"
+                                           placeholder="Şifrenizi Onaylayın" />
+                                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <input type="submit" value="Kayıt Ol" class="btn btn-solid w-auto" />                                
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label asp-for="LastName" class="control-label"></label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Username" class="control-label"></label>
-                    <input asp-for="Username" class="form-control" />
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PhoneNumber" class="control-label"></label>
-                    <input asp-for="PhoneNumber" class="form-control" />
-                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ConfirmPassword" class="control-label"></label>
-                    <input asp-for="ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
-
-    @section Scripts {
-        @{
-            await Html.RenderPartialAsync("_ValidationScriptsPartial");
-        }
+</section>
+<!--Section ends-->
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     }
