--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Create.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Create.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Color" class="control-label">Renk</label>
+                <input asp-for="Color" class="form-control" />
+                <span asp-validation-for="Color" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Ürün Açıklaması</label>
@@ -36,13 +41,11 @@
                     <option value="">Kategori Seçiniz...</option>
                 </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
+            </div>    
             <div class="form-group">
-                <label asp-for="CategoryId" class="control-label">Kategori Seçiniz</label>
-                <select class="form-control" asp-items="@ViewBag.Categories" asp-for="CategoryId">
-                    <option value="">Alt kategori Seçiniz...</option>
-                </select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
+                <label asp-for="Brand" class="control-label">Marka</label>
+                <input asp-for="Brand" class="form-control" />
+                <span asp-validation-for="Brand" class="text-danger"></span>
             </div>
 
             <div class="form-group">
