--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Details.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Details.cshtml
@@ -24,13 +24,13 @@
                             <img src="@Model.HeaderImageUrl" alt="@Model.Title"
                                  class="img-fluid blur-up lazyload image_zoom_cls-0">
                         </div>
-                        @foreach (var img in Model.Images)
+                        @*@foreach (var img in Model.Images)
                         {
                             <div>
                                 <img src="@img.ImageUrl" alt="@Model.Title"
                                      class="img-fluid blur-up lazyload image_zoom_cls-1">
                             </div>
-                        }
+                        }*@
 
                     </div>
                     <div class="row">
@@ -50,9 +50,9 @@
                     <div class="product-right">
                         <h2>@Model.Title</h2>
                         <div class="label-section">
-                            <span class="badge badge-grey-color">#1 Best seller</span>
-                            <span class="label-text">in fashion</span>
+                            <span class="badge badge-grey-color">Satıcı</span>                            
                         </div>
+                        <h6>@Model.SellerUsername</h6>
                         <h3 class="price-detail">@Model.Price</h3>
                         <ul class="color-variant">
                             <li>@Model.Color</li>
@@ -128,6 +128,24 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="top-review" role="tabpanel" aria-labelledby="review-top-tab">
+                        <div class="product-tab-discription">
+                            <div class="part">                                
+                                @foreach (var item in ViewBag.Comments)
+                                {
+                                    <div class="media">
+                                        <img src="@item.UserProfilePic" alt="" class="img-fluid" />
+                                        <div class="media-body">
+                                            <h5 class="mt-0">@item.Username</h5>
+                                            <p>
+                                                @item.Content
+                                            </p>
+
+                                        </div>
+                                    </div>
+                                }
+
+                            </div>
+                        </div>
                         @if (User.Identity!.IsAuthenticated)
                         {
                             <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
