--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/Components/Category/Default.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/Components/Category/Default.cshtml
@@ -13,8 +13,8 @@
                 {
                     @if (category.Id == subCategory.ParentCategoryId)
                     {
-                        <li style="flex-grow:inherit">
-                            <a style="padding-inline-end" asp-action="Index" asp-controller="Product" asp-route-id="@subCategory.Id">                              
+                        <li >
+                            <a class="text-wrap" asp-action="Index" asp-controller="Product" asp-route-id="@subCategory.Id">
                                 @subCategory.Name
                             </a>
                         </li>
@@ -25,6 +25,7 @@
         </li>
     }
 }
+
 
 
 
