--- a/evdekinisatcom.MvcWebApp.WebMvc/Areas/Admin/Views/Home/UserSellerActivity.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Areas/Admin/Views/Home/UserSellerActivity.cshtml
@@ -10,9 +10,12 @@
 @foreach (var activity in Model)
 {
     <div>
-        <p>@activity.OrderId</p>
-        <p>@activity.SellerId</p>
-        <p>@activity.Activity</p>
-        <p>@activity.TotalPrice</p>
+        <p>@activity.OrderNumber</p>
+        <p>@activity.SellerName @activity.SellerSurname</p>
+        <p>@activity.BuyerName @activity.BuyerSurname</p>
+        <p>@activity.BuyerAddress</p>
+        <p>@activity.TotalAmount</p>
+        <p>@activity.FeeAmount</p>
+        <p>@activity.NetAmount</p>
     </div>
 }
